[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wazen"
dynamic = ["version"]
description = "Official Python SDK for the Wazen WhatsApp API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "IrixSoft", email = "info@irixsoft.com" }]
keywords = ["wazen", "whatsapp", "api", "sdk", "messaging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.27,<1"]

[project.urls]
Homepage = "https://wazen.dev"
Documentation = "https://wazen.dev/docs"
Repository = "https://github.com/irixsoft/wazen-python-sdk"
Issues = "https://github.com/irixsoft/wazen-python-sdk/issues"

[tool.hatch.version]
path = "src/wazen/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/wazen"]
